[package]
name = "gameboy"
version = "0.1.0"
authors = [ "Will Johnston <wbjohnston@gmail.com>" ]
edition = "2018"

[[bin]]
name = "debug"
path = "src/bin/debugger.rs"

[lib]
name = "gameboy"
path = "src/lib.rs"

[dependencies]
failure = "0.1"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.8"
criterion = "0.3"
